[package]
name = "t-library"
version = "0.1.0"
description = "T-Library"
authors = ["Ykptrkan"]
edition = "2021"

[[bin]]
name = "t-library"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri özellikleri genişletildi (Tüm dosya sistemi ve pencere yetkileri açıldı)
tauri = { version = "1", features = [ "fs-remove-dir", "fs-read-dir", "fs-exists", "fs-remove-file", "fs-create-dir", "fs-copy-file", "fs-write-file", "fs-rename-file", "fs-read-file", "dialog-open", "shell-open", "path-all", "window-all" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8.37"
image = "0.25"
base64 = "0.21"
rusqlite = { version = "0.29", features = ["bundled"] }
epub = "2.1"
rayon = "1.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
